# dsm2ui

./: .gitignore  LICENSE  README-calibrator.md  README-postpro.md  README.md  environment.yml  inspect_catalog.py  pyproject.toml  station-math-expressions-plan.md
.github/: colorcet-notes.md  copilot-instructions.md  mixed-catalog-datareference-plan.md  network-ec-correction.md  station-math-expressions.md
.github/instructions/: terminal-conda.instructions.md
.github/presentations/: agents-and-skills-intro.md  dsm2-calib-intro.md
.github/prompts/: improve-dssui-labels.prompt.md
dsm2ui/: __init__.py  _logging.py  animate.py  animate_cli.py  channel_orient.py  cli.py  create_ann_inputs.py  datastore.py  datastore2dss.py  dsm2ui.py  echo_plugin.py  flow_layer.py  readers.py  session.py  stage_layer.py
dsm2ui/calib/: calib_cascade.py  calib_cli.py  calib_config_builder.py  calib_optimize.py  calib_run.py  calib_stations.py  calibplot.py  calibplotui.py  calibrator_design.md  checklist_dsm2.py  dsm2_cal_metric_heatmap.py  expression_eval.py  postpro_dsm2.py  run_calib.py  run_optimize.py
dsm2ui/deltacdui/: deltacdui.py  deltacduimgr.py
dsm2ui/dssui/: dss_cli.py  dssui.py  (+1 more)
tests/: __init__.py  animate_examples.bat  ex_calibplot.py  ex_calibplots.py  ex_channel_orient.py  ex_datastore.py  ex_deltacdui.py  ex_dsm2ui.py  ex_dssui.py  ex_tidefilui.py  ex_tsdataui.py  flow_config.yaml  map_label_examples.yaml  stage_config.yaml  test_animate.py  test_calib_optimizer.py  test_calib_run.py  test_calibplot.py  test_datastore_postpro.py  test_deltacdui.py  test_dssui.py  test_flow_layer.py  test_get_data_reference.py  test_mixed_catalog.py  test_postpro_load.py  test_slicer_performance.py  test_tidefile_ui.py  test_tidefile_ui_manager.py  velocity_config.yaml
(+2 files in other folders)
