[build-system]
requires = ["setuptools>=64.0", "wheel", "setuptools_scm>=7.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "dsm2ui/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
fallback_version = "0.0.1"

[project]
name = "dsm2ui"
dynamic = ["version"]
description = "DSM2 User Interface and analysis tools"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Kijin Nam", email = "knam@water.ca.gov"},
    {name = "Nicky Sandhu", email = "psandhu@water.ca.gov"}
]
keywords = ["dsm2", "delta", "modeling", "hydrology", "ui"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "dvue @ git+https://github.com/CADWRDeltaModeling/dvue",
    "dms-datastore",
    "pydsm",
    "panel",
    "holoviews",
    "geoviews",
    "hvplot",
    "pyhecdss",
    "vtools",
    "geopandas",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "param",
    "bokeh",
    "colorcet",
    "diskcache",
    "tqdm",
    "xarray",
    "pyyaml",
    "click",
]

[project.urls]
Homepage = "https://github.com/CADWRDeltaModeling/dsm2ui"

[project.scripts]
dsm2ui = "dsm2ui.cli:main"

[tool.setuptools]
zip-safe = false
include-package-data = true
packages = {find = {include = ["dsm2ui", "dsm2ui.*"]}}

[tool.setuptools.package-data]
"dsm2ui" = ["dsm2gis/*.geojson"]
"dsm2ui.calib" = ["data/*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "ex_*.py"]
collect_ignore = ["setup.py"]
addopts = "--doctest-modules"
